# code-doc-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  API.md  CLAUDE.md  Makefile  README.md  prd.md  test.py
.github/workflows/: cd.yml  ci.yml
backend/: .env.example  .ruff.toml  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260116_1327_31d392c53a99_initial_migration_for_codebase.py
backend/app/: __init__.py  main.py  types.py  worker.py
backend/app/activities/: __init__.py  cleanup_activities.py  db_activities.py  embed_activities.py  index_activities.py  parse_activities.py
backend/app/agents/: __init__.py  graph.py  nodes.py  state.py  tools.py
backend/app/api/v1/: __init__.py  chat.py  codebase.py  health.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  metrics.py  security.py  tracing.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  schemas.py
backend/app/models/db/: __init__.py  base.py  codebase.py
backend/app/repositories/: __init__.py  codebase_repository.py
backend/app/services/: __init__.py  codebase_processor.py  codebase_store.py  embedding_service.py  llm_service.py  redis_session_store.py  retrieval_service.py  secret_scanner.py  session_store.py  vector_store.py
backend/app/utils/: __init__.py  chunking.py  code_parser.py  secret_detection.py
backend/app/workflows/: __init__.py  ingestion_workflow.py  session_cleanup_workflow.py
backend/tests/: conftest.py
backend/tests/api/: test_codebase.py
backend/tests/integration/: test_agent_context.py  test_chat.py  test_chat_session.py  test_codebase.py  test_codebase_delete.py  test_codebase_upload.py  test_e2e.py  test_ingestion_workflow.py  test_rate_limit.py  test_session_cleanup_workflow.py  test_status.py  test_upload.py
backend/tests/unit/: test_code_parser.py  test_codebase_processor.py  test_llm_service.py  test_rate_limiting.py  test_redis_session_store.py  test_retrieval.py  test_secret_detection.py  test_secret_scanner.py  test_vector_store.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md
frontend/: .cta.json  .eslintrc  .gitignore  .oxfmtrc.jsonc  .oxlintrc.json  .prettierrc  AGENTS.md  Dockerfile  lint-staged.config.js  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/app/: root.tsx  styles.css
frontend/app/components/: ChatInterface.tsx  CodeViewer.tsx  StatusTracker.tsx  UploadForm.tsx
frontend/app/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx
frontend/app/routes/: chat.tsx  index.tsx  upload.tsx
frontend/public/: manifest.json
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: ChatInterface.tsx  CodeViewer.tsx  CodebaseCard.tsx  CodebaseList.tsx  DeleteConfirmDialog.tsx  EmptyState.tsx  Markdown.tsx  StatusTracker.tsx  UploadForm.tsx  codebase-columns.tsx
frontend/src/components/ui/: button.tsx  card.tsx  data-table.tsx  input.tsx
frontend/src/hooks/: useCodebaseList.ts  useDeleteCodebase.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/routes/: __root.tsx  chat.$codebaseId.tsx  index.tsx  upload.tsx
frontend/src/types/: index.ts
infra/: README.md  Tiltfile
infra/docker/: compose.yml  docker-compose.yml  init-db.sh
infra/docker/prometheus/: prometheus.yml
infra/k8s/: backend.yaml  chromadb.yaml  configmap.yaml  frontend.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  secret.yaml  temporal.yaml  worker.yaml
infra/monitoring/dashboards/: ingestion-metrics.json  query-metrics.json  system-health.json
scripts/: setup.sh
specs/001-mvp-implementation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-implementation/checklists/: requirements.md
specs/001-mvp-implementation/contracts/: openapi.yaml  types.ts
temporal/: Dockerfile  pyproject.toml  worker.py
temporal/activities/: __init__.py  index_activities.py  parse_activities.py
temporal/workflows/: __init__.py  ingestion_workflow.py
